--- a/src/Components/Account/account.scss
+++ b/src/Components/Account/account.scss
@@ -8,6 +8,8 @@
   width: 100vw;
   height: 100vh;
 
+  box-shadow: inset 0 0 0 1000px rgba(189, 194, 199, 0.534);
+
   background-size: cover;
   background-position: center;
   overflow: hidden;
