--- a/src/Components/AllStretches/allstretches.scss
+++ b/src/Components/AllStretches/allstretches.scss
@@ -1,51 +1,36 @@
-@import '../index.scss';
+@import "../index.scss";
 
 .stretch-container {
   display: flex;
   flex-direction: row;
-  // margin: 20px auto;
   padding: 0 24px;
   gap: 24px;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  background-image: url('https://img.freepik.com/free-photo/abstract-luxury-blur-dark-grey-black-gradient-used-as-background-studio-wall-display-your-products-plain-studio-background_1258-54444.jpg?w=2000');
   background-size: cover;
 
   .stretch-preview {
     width: 360px;
     // CARD1
     // background-color: $color-secondary;
-    border-radius: 10px;
+    // border-radius: 10px;
     margin: 20px 0;
-    // CARD1
-    // box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     transition: all 150ms ease-in-out 0s;
     padding: 8px;
-
-    //CARD1
-    // &:hover {
-    //   box-shadow: 2px 5px 6px rgba(0, 0, 0, 0.3);
-    //   transform: translateY(-2px);
-    // }
-
     .stretch-content {
       * {
         text-decoration: none;
-        // CARD1
-        // color: white;
         color: black;
       }
 
       img {
         width: 344px;
-        //ADD HEIGHT OF PIC HERE
-        border-radius: 10px;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         transition: all 150ms ease-in-out 0s;
 
         &:hover {
           box-shadow: 2px 5px 6px rgba(0, 0, 0, 0.3);
-          transform: translateY(-2px);
+          transform: translateY(-3px);
         }
       }
       &-text {
@@ -67,13 +52,10 @@
 
       .add-to-routine {
         display: flex;
-        // justify-content: flex-end;
         align-items: center;
         text-align: right;
         cursor: pointer;
         margin-left: 12px;
-
-        // font-style: italic;
 
         button {
           display: flex;
@@ -124,11 +106,9 @@
 
     background-color: $color-background;
     border-radius: 16px;
-    // border: 2px solid black;
     display: flex;
     flex-direction: column;
 
-    // padding: 32px;
     &-top {
       display: flex;
       justify-content: space-between;
