--- a/src/Components/CreateAccount/createaccount.scss
+++ b/src/Components/CreateAccount/createaccount.scss
@@ -1,5 +1,15 @@
 @import "../index.scss";
 
+.background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 3;
+  background-color: #33333385;
+}
+
 .full-view-container {
   display: flex;
   justify-content: center;
@@ -18,6 +28,9 @@
     text-align: center;
   }
   .account-container {
+    position: absolute;
+
+    z-index: 4;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -25,6 +38,7 @@
     width: 40vw;
     height: 60vh;
     background-color: $color-background;
+    border-radius: 16px;
 
     .form-widget {
       display: flex;
