--- a/src/Components/SingleRoutine/singleroutine.scss
+++ b/src/Components/SingleRoutine/singleroutine.scss
@@ -1,5 +1,5 @@
-@use '../index.scss';
-@import '../index.scss';
+@use "../index.scss";
+@import "../index.scss";
 
 .main-container {
   display: flex;
@@ -41,7 +41,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url('https://htpartners.com/wp-content/uploads/2017/07/iStock_000007946674Small.jpg');
+    background-image: url("https://htpartners.com/wp-content/uploads/2017/07/iStock_000007946674Small.jpg");
     filter: blur(8px);
     -webkit-filter: blur(2px);
     background-repeat: no-repeat;
@@ -59,14 +59,15 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
-    padding: 10px;
+    padding: 16px;
     width: 100vw;
     flex-grow: 1;
+    min-height: 0%;
     // height: auto;
 
     //background image shadow
     box-shadow: inset 0 0 0 1000px rgba(189, 194, 199, 0.4);
-    background-image: url('https://images.unsplash.com/photo-1533090161767-e6ffed986c88?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8ZW1wdHklMjBkZXNrfGVufDB8fDB8fA%3D%3D&w=1000&q=80');
+    background-image: url("https://images.unsplash.com/photo-1533090161767-e6ffed986c88?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8ZW1wdHklMjBkZXNrfGVufDB8fDB8fA%3D%3D&w=1000&q=80");
     background-position-y: 60%;
     background-repeat: no-repeat;
     background-size: 120%;
@@ -112,6 +113,18 @@
         @include button();
       }
     }
+
+    .warning {
+      // display: inline-block;
+      // border: 1px;
+      border-radius: 5px;
+      background-color: red;
+      margin: 16px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      // height: auto;
+    }
   }
   .start-routine-footer {
     display: flex;
@@ -123,14 +136,6 @@
     // left: 45%;
     align-content: center;
     justify-content: center;
-
-    .warning {
-      display: inline-block;
-      border: 1px;
-      border-radius: 5px;
-      background-color: red;
-      height: auto;
-    }
 
     .add-to-routine {
       display: inline-block;
