--- a/src/Components/index.scss
+++ b/src/Components/index.scss
@@ -1,7 +1,7 @@
 //font variables
-$font-content: 'Signika Negative', sans-serif;
-$font-title: 'Signika Negative', sans-serif;
-$font-logo: 'Signika Negative', sans-serif;
+$font-content: "Signika Negative", sans-serif;
+$font-title: "Signika Negative", sans-serif;
+$font-logo: "Signika Negative", sans-serif;
 
 //color variables
 $color-background: #ecf5ff;
@@ -50,6 +50,12 @@ $color-accent-tertiary: #70a9a1;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 4px;
   cursor: pointer;
+  transition: all 150ms ease-in-out 0s;
+
+  &:hover {
+    box-shadow: 2px 5px 6px rgba(0, 0, 0, 0.3);
+    transform: translateY(-1px);
+  }
 }
 
 @mixin button-menu() {
