--- a/src/Components/SingleStretch/singlestretch.scss
+++ b/src/Components/SingleStretch/singlestretch.scss
@@ -24,11 +24,11 @@
     background-color: $color-primary;
     background-image: url('https://wallpaper.dog/large/20361107.jpg');
     background-size: cover;
-    background-repeat: no-repeat;
+    background-repeat: repeat-x;
 
     // background-position: 20% 40%;
     // backdrop-filter: ;
-    background-position-y: 65%;
+    background-position: 0px -470px;
     width: 100%;
 
     img {
@@ -121,9 +121,9 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      width: 200px;
+      width: 300px;
       height: auto;
-      padding: 5px;
+      padding: 20px;
       color: white;
       background-color: $color-secondary;
       border-radius: 20px;
