fixed home padding and removed single stretch img

--- a/src/Components/Home/home.scss
+++ b/src/Components/Home/home.scss
@@ -78,7 +78,7 @@
     &-details {
       display: flex;
       gap: 16px;
-      padding: 10px 48px;
+      // padding: 10px 48px;
       &-cards {
         width: 30vw;
         height: 300px;
