--- a/src/Components/AllStretches/allstretches.scss
+++ b/src/Components/AllStretches/allstretches.scss
@@ -27,6 +27,7 @@
         width: 344px;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         transition: all 150ms ease-in-out 0s;
+        border-radius: 4px;
 
         &:hover {
           box-shadow: 2px 5px 6px rgba(0, 0, 0, 0.3);
