--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -1,11 +1,15 @@
-@import '../index.scss';
+@import "../index.scss";
 
-.about-container{
+.about-container {
   // background-image: url('../../../public/about-background.jpg');
   // background-size: 100vw auto;
   // background-position: center;
   // background-color: ie-hex-str($color: #000000);
-  background: linear-gradient(hsla(137, 70%, 12%, 0.8), hsla(137, 68%, 52%, 0.8)), url("../../../public/about-background.jpg");
+  background: linear-gradient(
+      hsla(137, 70%, 12%, 0.8),
+      hsla(137, 68%, 52%, 0.8)
+    ),
+    url("../../../public/about-background.jpg");
   width: 100%;
   height: calc(100vh - 142px);
   background-size: cover;
@@ -15,22 +19,22 @@
   position: reltaive;
   justify-content: center;
 
-  .content{
+  .content {
     position: relative;
     text-align: center;
 
-    h1{
+    h1 {
       color: $color-background;
       margin-bottom: 10px;
       font-size: 40pt;
     }
-    h2{
+    h2 {
       color: $color-background;
       font-size: 26pt;
       font-weight: 400;
       margin: 0 40px;
     }
-    .creator-wrapper{
+    .creator-wrapper {
       margin-top: 30px;
       justify-content: space-evenly;
       display: flex;
@@ -41,7 +45,7 @@
       // height: 300px;
       // border-radius: ;
 
-      .creator{
+      .creator {
         display: flex;
         flex-direction: column;
         text-align: center;
@@ -50,23 +54,21 @@
         width: auto;
         padding: 28px 28px;
 
-        h3{
+        h3 {
           margin-bottom: 20px;
           color: $color-tertiary;
           font-size: 36pt;
           font-weight: 600;
-
         }
-        .headshot{
+        .headshot {
           width: 300px;
           height: 300px;
           border-radius: 48px;
           margin-bottom: 10px;
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
         }
 
-        a{
+        a {
           @include button;
           text-decoration: none;
           color: $color-tertiary;
@@ -78,4 +80,3 @@
     }
   }
 }
-
