--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -32,6 +32,7 @@
     display: flex;
     gap: 16px;
     cursor: pointer;
+    padding-right: 24px;
     &-mui {
       &:hover {
         color: $color-tertiary;
