--- a/src/Components/SingleStretch/singlestretch.scss
+++ b/src/Components/SingleStretch/singlestretch.scss
@@ -1,5 +1,5 @@
-@use '../index.scss';
-@import '../index.scss';
+@use "../index.scss";
+@import "../index.scss";
 
 .single-stretch-container {
   display: flex;
@@ -96,11 +96,11 @@
   .secondhalf {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     width: 100%;
     height: 40vh;
     margin: 20px;
-    gap: 300px;
+    // gap: 300px;
 
     .stretch-gif {
       display: contents;
@@ -121,8 +121,8 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      width: 360px;
-      height: auto;
+      max-width: 480px;
+      max-height: 370px;
       padding: 20px;
       color: white;
       background-color: $color-secondary;
