--- a/src/Components/SingleRoutine/singleroutine.scss
+++ b/src/Components/SingleRoutine/singleroutine.scss
@@ -52,7 +52,6 @@
   }
 
   .single-routine-container {
-    z-index: 1;
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
@@ -62,13 +61,11 @@
     padding: 16px;
     width: 100vw;
     flex-grow: 1;
-    min-height: 0%;
-    // height: auto;
 
     //background image shadow
     box-shadow: inset 0 0 0 1000px rgba(189, 194, 199, 0.4);
-    background-image: url("https://images.unsplash.com/photo-1533090161767-e6ffed986c88?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8ZW1wdHklMjBkZXNrfGVufDB8fDB8fA%3D%3D&w=1000&q=80");
-    background-position-y: 60%;
+    background-image: url('https://images.unsplash.com/photo-1533090161767-e6ffed986c88?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8ZW1wdHklMjBkZXNrfGVufDB8fDB8fA%3D%3D&w=1000&q=80');
+    background-position-y: 0%;
     background-repeat: no-repeat;
     background-size: 140%;
     // background-size: cover;
